# claude-code-hub

./: .gitignore  README.md  docker-compose.yml
claude-code-hub-backend/: .env  Dockerfile  pyproject.toml
claude-code-hub-backend/app/: auth.py  database.py  main.py  models.py
claude-code-hub-backend/app/routers/: chat.py  files.py  sessions.py  users.py
claude-code-hub-backend/app/services/: claude_service.py
claude-code-hub-backend/app/tools/: base.py  executor.py
claude-code-hub-frontend/: Dockerfile  index.html  package-lock.json  package.json
claude-code-hub-frontend/src/: App.tsx
claude-code-hub-frontend/src/components/: ChatArea.tsx  FileManager.tsx  MessageBubble.tsx  SettingsPanel.tsx  Sidebar.tsx
claude-code-hub-frontend/src/contexts/: AuthContext.tsx
claude-code-hub-frontend/src/lib/: api.ts
claude-code-hub-frontend/src/pages/: LoginPage.tsx
